--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@types/agent-base": "^4.2.0",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.9.4",
+    "@types/node-fetch": "^2.1.6",
     "agent-base": "^4.2.1",
     "assert": "^1.4.1",
     "mocha": "^6.0.2",
+    "node-fetch": "^2.3.0",
     "proxy": "^0.2.4",
     "ts-node": "^8.0.2",
     "typescript": "3.2.4"
   },
   "main": "./lib/index.js",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
