--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "agent-base": "^4.2.1",
     "assert": "^1.4.1",
     "mocha": "^6.0.2",
+    "mssql": "^4.3.2",
     "node-fetch": "^2.3.0",
     "proxy": "^0.2.4",
     "ts-node": "^8.0.2",
