--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,13 +42,8 @@ jobs:
 
 workflows:
   version: 2
-  build_and_publish:
+  build:
     jobs:
-      - build:
-          filters:
-            branches:
-              only: /.*/
-              ignore: /.*deploy-cli.*/
-            tags:
-              only: /.*/
-              ignore: /.*dev.*/
+      - build_8
+      - build_10
+      - build_12
