--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@journeyapps/https-proxy-socket",
   "version": "0.0.1",
   "author": "JourneyApps",
+  "repository": "journeyapps/https-proxy-socket",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
