--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.9.4",
     "@types/node-fetch": "^2.1.6",
-    "agent-base": "^6.0.0",
     "assert": "^1.4.1",
     "mocha": "^6.0.2",
     "mssql": "^4.3.2",
@@ -27,7 +26,9 @@
     "typescript": "^3.7.5"
   },
   "main": "./lib/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "agent-base": "^6.0.0"
+  },
   "files": [
     "/README.md",
     "/lib"
