--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
 {
   "compilerOptions": {
+    "target": "es2020",
     "moduleResolution": "node",
-    "module": "commonjs",
-    "target": "es2016",
-    "lib": ["es2016"],
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "strict": true,
     "noImplicitAny": true,
     "preserveConstEnums": true,
-    "sourceMap": false,
-    "alwaysStrict": true,
-    "outDir": "lib",
-    "rootDir": "src",
     "allowJs": false,
-    "declaration": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*"
