--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-fetch": "^2.3.0",
     "proxy": "^1.0.1",
     "ts-node": "^8.0.2",
+    "lerna": "^9.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
