--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build:
-    name: Publish
+    name: Publish Packages
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
