--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "repository": "journeyapps/https-proxy-socket",
   "license": "MIT",
   "type": "module",
-  "main": "./lib/cjs/index.js",
+  "main": "./lib/cjs/index.cjs",
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "exports": {
     ".": {
       "import": "./lib/esm/index.js",
-      "require": "./lib/cjs/index.js"
+      "require": "./lib/cjs/index.cjs"
     }
   },
   "bin": {
