--- a/package.json
+++ b/package.json
@@ -5,31 +5,29 @@
   "repository": "journeyapps/https-proxy-socket",
   "license": "MIT",
   "type": "module",
-  "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.js",
+  "main": "./lib/cjs/index.cjs",
+  "module": "./lib/esm/index.mjs",
   "exports": {
     ".": {
       "import": {
-        "default": "./lib/esm/index.js",
+        "default": "./lib/esm/index.mjs",
         "types": "./lib/esm/index.d.ts"
       },
       "require": {
-        "default": "./lib/cjs/index.js",
+        "default": "./lib/cjs/index.cjs",
         "types": "./lib/cjs/index.d.ts"
       }
     }
   },
   "bin": {
-    "mongo-replicas": "lib/esm/bin/mongoReplicas.js"
+    "mongo-replicas": "lib/esm/bin/mongoReplicas.mjs"
   },
   "scripts": {
     "ci:publish": "changeset publish && git push --follow-tags",
     "ci:version": "changeset version && pnpm install --no-frozen-lockfile",
     "clean": "rm -rf ./lib && tsc -b --clean",
     "clean:modules": "rm -rf node_modules",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build": "pnpm build:esm && pnpm build:cjs",
+    "build": "node scripts/build.js",
     "test": "vitest run"
   },
   "devDependencies": {
