--- a/package.json
+++ b/package.json
@@ -45,6 +45,18 @@
     "agent-base": "^6.0.2",
     "socks": "^2.8.7"
   },
+  "./HttpsProxySocket": {
+    "require": "./lib/cjs/HttpsProxySocket.cjs",
+    "import": "./lib/esm/HttpsProxySocket.mjs"
+  },
+  "./tediousPatch": {
+    "require": "./lib/cjs/tediousPatch.cjs",
+    "import": "./lib/esm/tediousPatch.mjs"
+  },
+  "./mongoPatch": {
+    "require": "./lib/cjs/mongoPatch.cjs",
+    "import": "./lib/esm/mongoPatch.mjs"
+  },
   "files": [
     "/README.md",
     "/lib"
