--- a/package.json
+++ b/package.json
@@ -5,41 +5,31 @@
   "repository": "journeyapps/https-proxy-socket",
   "license": "MIT",
   "type": "module",
-  "main": "./lib/cjs/index.cjs",
-  "module": "./lib/esm/index.mjs",
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
   "exports": {
     ".": {
       "import": {
-        "default": "./lib/esm/index.mjs",
+        "default": "./lib/esm/index.js",
         "types": "./lib/esm/index.d.ts"
       },
       "require": {
-        "default": "./lib/cjs/index.cjs",
+        "default": "./lib/cjs/index.js",
         "types": "./lib/cjs/index.d.ts"
       }
-    },
-    "./HttpsProxySocket": {
-      "require": "./lib/cjs/HttpsProxySocket.cjs",
-      "import": "./lib/esm/HttpsProxySocket.mjs"
-    },
-    "./tediousPatch": {
-      "require": "./lib/cjs/tediousPatch.cjs",
-      "import": "./lib/esm/tediousPatch.mjs"
-    },
-    "./mongoPatch": {
-      "require": "./lib/cjs/mongoPatch.cjs",
-      "import": "./lib/esm/mongoPatch.mjs"
     }
   },
   "bin": {
-    "mongo-replicas": "lib/esm/bin/mongoReplicas.mjs"
+    "mongo-replicas": "lib/esm/bin/mongoReplicas.js"
   },
   "scripts": {
     "ci:publish": "changeset publish && git push --follow-tags",
     "ci:version": "changeset version && pnpm install --no-frozen-lockfile",
     "clean": "rm -rf ./lib && tsc -b --clean",
     "clean:modules": "rm -rf node_modules",
-    "build": "node scripts/build.js",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build": "pnpm build:esm && pnpm build:cjs",
     "test": "vitest run"
   },
   "devDependencies": {
