--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "proxy": "^2.2.0",
     "tedious": "^18.6.1",
     "typescript": "^5.9.3",
+    "mssql": "^12.0.0",
     "vitest": "^3.2.4"
   },
   "dependencies": {
