--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
   "devDependencies": {
     "@types/agent-base": "^4.2.0",
     "@types/node": "^24.7.2",
+    "async-listen": "^3.1.0",
     "lerna": "^9.0.0",
     "node-fetch": "^3.3.2",
     "prettier": "^3.6.2",
     "proxy": "^2.2.0",
     "typescript": "^5.9.3",
-    "mssql": "^12.0.0",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "agent-base": "^6.0.2",
+    "agent-base": "^7.1.4",
     "socks": "^2.8.7"
   },
   "files": [
