--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,24 @@
 {
   "compilerOptions": {
-    "target": "es2022",
     "moduleResolution": "node",
-    "declaration": true,
-    "declarationMap": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "strict": true,
+    "module": "commonjs",
+    "target": "es2016",
+    "lib": ["es2016"],
     "noImplicitAny": true,
     "preserveConstEnums": true,
+    "sourceMap": false,
+    "alwaysStrict": true,
+    "outDir": "lib",
+    "rootDir": "src",
     "allowJs": false,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
+    "declaration": true,
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
   ],
   "exclude": [
     "node_modules",
-    "**/*.test.ts"
+    "**/*.spec.ts"
   ]
 }
