--- a/.github/workflows/dev-package.yml
+++ b/.github/workflows/dev-package.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: 22.16
+          node-version-file: '.nvmrc'
 
       - uses: pnpm/action-setup@v4
         name: Install pnpm
