--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: 22.16
+          node-version-file: '.nvmrc'
 
       - uses: pnpm/action-setup@v4
         name: Install pnpm
