--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,20 +1,24 @@
 name: Release
 
-
 on:
   push:
     branches: [master]
-  workflow_dispatch:
+  workflow_dispatch: # For dev publishing
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 permissions:
   id-token: write # Required for OIDC / trusted publishing
   contents: write # Required for changesets pushing commits
   pull-requests: write # Required for changesets creating PRs
 
+env:
+  SECRETS: ${{ toJSON(secrets) }}
+  GITHUB_TOKEN: ${{ secrets.SHARED_GH_TOKEN }}
+
 jobs:
-  realeas:
-    name: Release
+  build:
+    name: Publish Packages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -22,7 +26,6 @@ jobs:
 
       - name: Enable Corepack
         run: corepack enable
-
 
       - name: Setup NodeJS
         uses: actions/setup-node@v6
@@ -37,23 +40,22 @@ jobs:
           npm --version
 
       - name: Install dependencies
-        run: pnpm install
-
+        run: pnpm install --no-frozen-lockfile
 
       - name: Build
         run: pnpm build
 
-      - name: Create Release Pull Request or Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        if: ${{ github.event_name == 'push' }}
-        with:
-          publish: pnpm ci:publish
-          version: pnpm changeset:version
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #      - name: Create Release Pull Request or Publish to npm
+      #        id: changesets
+      #        uses: changesets/action@v1
+      #        if: ${{ github.event_name == 'push' }}
+      #        with:
+      #          version: pnpm ci:version
+      #          publish: pnpm ci:publish
+      #        env:
+      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Dev packages
+      - name: Dev publish
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
           pnpm changeset version --no-git-tag --snapshot dev
